<resources>
    <string name="app_name">LabsCM20172</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="lastName">Last name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City: </string>
    <string name="date">MM/DD/AA</string>
    <string name="dateLabel">Birthday: </string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="updateProfile">Update profile</string>
    <string name="close">Close application</string>
    <string name="update">Update</string>
    <string name="validation">User incorrect</string>
    <string name="missing">Missing fields to fill out</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
