<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="co.edu.udea.compumovil.gr05_20172.lab1.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="144dp"
                android:layout_height="108dp"
                android:paddingTop="20dp"
                app:srcCompat="@drawable/profile"
                android:onClick="onClick"/>

            <EditText
                android:id="@+id/txtUserName"
                style="@style/styleTxt"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                android:inputType="textCapSentences|textNoSuggestions" />

            <EditText
                android:id="@+id/txtUserLastName"
                style="@style/styleTxt"
                android:hint="@string/lastName"
                android:inputType="textCapSentences|textNoSuggestions" />

            <RadioGroup
                android:id="@+id/rGrGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/tvDate"
                style="@style/styleTxtView"
                android:textColor="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:clickable="true"
                android:text="@string/date"/>

            <EditText
                android:id="@+id/txtUserPhone"
                style="@style/styleTxt"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtUserAddress"
                style="@style/styleTxt"
                android:hint="@string/address"
                android:inputType="textPersonName|textNoSuggestions" />

            <EditText
                android:id="@+id/txtUserEmail"
                style="@style/styleTxt"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/txtUserPassword"
                style="@style/styleTxt"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                style="@style/styleTxt"
                android:inputType="textFilter"
                android:hint="@string/city" />

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                style="@style/styleTxt" />

            <Button
                android:id="@+id/btnUserRegister"
                style="@style/styleBtn"
                android:layout_marginTop="40dp"
                android:text="@string/register"
                android:onClick="onClick"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>