<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="co.edu.udea.compumovil.gr05_20172.lab1.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="144dp"
                android:layout_height="108dp"
                android:paddingTop="20dp"
                app:srcCompat="@drawable/profile"
                android:onClick="onClick"/>

            <EditText
                android:id="@+id/txtUserName"
                style="@style/styleTxt"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:inputType="textCapSentences|textNoSuggestions" />

            <EditText
                android:id="@+id/txtUserLastName"
                style="@style/styleTxt"
                android:gravity="center"
                android:inputType="textCapSentences|textNoSuggestions" />

            <RadioGroup
                android:id="@+id/rGrGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateLabel" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvDate"
                    style="@style/styleTxtView"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtUserPhone"
                style="@style/styleTxt"
                android:gravity="center"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtUserAddress"
                style="@style/styleTxt"
                android:gravity="center"
                android:inputType="textPersonName|textNoSuggestions" />

            <EditText
                android:id="@+id/txtUserEmail"
                style="@style/styleTxt"
                android:gravity="center"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/txtUserPassword"
                style="@style/styleTxt"
                android:gravity="center"
                android:inputType="textPassword" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:paddingTop="40dp"/>

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                    style="@style/styleTxt"
                    android:layout_marginTop="0dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnUserRegister"
                style="@style/styleBtn"
                android:layout_marginTop="40dp"
                android:text="@string/update"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>